deploy/rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shared-nlb
