deploy/canary-podip.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunnel-canary
  namespace: YOUR_TUNNEL_NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: YOUR_SINGLE_ACTIVE_TUNNEL_LABEL
  ports:
    - name: wg
      protocol: UDP
      port: 51820
      targetPort: 51820
    - name: health
      protocol: TCP
      port: 9901
      targetPort: 9901
